tests/ui/issues/issue-57362-2.stderr
error[E0599]: the function or associated item `make_g` exists for fn pointer `fn(&())`, but its trait bounds were not satisfied
  --> $DIR/issue-57362-2.rs:22:25
   |
LL |     let x = <fn (&())>::make_g();
   |                         ^^^^^^ function or associated item cannot be called on `fn(&())` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `for<'a> fn(&'a ()): X`
   = help: items from traits can only be used if the trait is implemented and in scope
note: `X` defines an item `make_g`, perhaps you need to implement it
  --> $DIR/issue-57362-2.rs:8:1
   |
LL | trait X {
   | ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
